# algotrader

./: .gitignore  main.py  portfolio.json  pyproject.toml
notes/: notes.txt
