[tool.poetry]
name = "algotrader"
version = "0.1.0"
description = ""
authors = ["zolcsika71 <bushdoctor2008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.36"
openai = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
